<resources>
    <string name="app_name">MAD_Project</string>
    <string name="tv_appname">Travel Guide</string>
    <string name="tv_login_email">Enter Email</string>
    <string name="tv_login_pwd">Enter Password</string>
    <string name="btn_login">Sign in</string>
    <string name="tv_login_signUpLink">Dont have an account? Sign Up</string>
    <string name="tv_register_title">Sign Up</string>
    <string name="tv_register_fullName">Enter Full name</string>
    <string name="tv_register_email">Enter Email</string>
    <string name="tv_register_uName">Enter Username</string>
    <string name="btn_register_signUp">Sign UP</string>
    <string name="tv_register_signInLink">Already have an account?Sign in</string>
    <string name="tab_home">Home</string>
    <string name="tab_hotel">Hotels</string>
    <string name="tab_article">Articles</string>
    <string name="tab_service">Services</string>
    <string name="tv_article_title">Title</string>
    <string name="tv_article_authorName">Author Name</string>
    <string name="tv_article">Article</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_main_title">Explore</string>
    <string name="tv_UProfile_title">User Profile</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_admin_logout">Logout</string>
    <string name="tv_admin_adminDashboard">Admin Dashboard</string>
    <string name="tv_admin_hotel">Hotels</string>
    <string name="tv_admin_service">Service</string>
    <string name="tv_admin_article">Articles</string>
    <string name="tv_admin_booking">Bookings</string>
    <string name="btn_update">Update Article</string>
    <string name="tv_user_fname">Full Name</string>
    <string name="tv_user_email">Email</string>
    <string name="tv_user_uname">Username</string>
    <string name="save_btn">Save</string>

</resources>